--- a/christmas-shop.css
+++ b/christmas-shop.css
@@ -1,30 +1,104 @@
 .header {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 70, 70, 1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px 8px;
+    max-width: 1440px;
+    width:1440px;
+    height: 64px;
+}
+.header_container_1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+    width: 1276px;
+    height: 64px;
+    background: #FFFFFF;
+}
+.logo_container{
+    display: flex;
+    align-items: center;
+    padding: 8px 20px;
+    gap: 8px;
+    width: 141px;
+    height: 40px;
+}
+.header_container_2{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 0px;
+    width: 1123px;
+    height: 40px;
+}
+.item_font{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: #181C29;
+}
+.items{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0px;
+    gap: 8px;
+    width: 376px;
+    height: 40px;
+}
+.item_gifts{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 12px 20px;
+    width: 78px;
+    height: 40px;
+}
+.item_about{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 12px 20px;
+    width: 88px;
+    height: 40px;
+}
+.item_best{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 12px 20px;
+    width: 74px;
+    height: 40px;
+}
+.item_contacts{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 12px 20px;
+    width: 112px;
+    height: 40px;
+}
+.hero_section_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 60px 8px;
+    width: 1440px;
+    height: 524px;
+}
+.hero_section_img{
+    width: 1440px;
+    height: 524px;
+    /*background: url("bg-ball.png"), url("bg-snow.png"), #FF4646;*/
+    background-color: #FF4646;
 }
 
 
-/*.header {*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    background-color: rgba(255, 70, 70, 1);*/
-/*}*/
-/*!*.header_top {*!*/
-/*!*    width: 100%;*!*/
-/*!*    height: 64px;*!*/
-/*!*    background-color: rgba(255, 70, 70, 1);*!*/
-/*!*}*!*/
-/*.gifts {*/
-/*    width: 100%;*/
-/*    !*height: 64px;*!*/
-/*    !*background-color: rgba(255, 70, 70, 1);*!*/
-/*    background-color: rgba(255, 255, 255, 1);*/
-/*}*/
-/*.container {*/
-/*        width: 1440px;*/
-/*        height: 64px;*/
-/*        background-color: rgba(255, 70, 70, 1);*/
-/*    margin-top:64px;*/
-/*}*/
 
