fix: add  new font + moved further in the layout

--- a/christmas-shop.css
+++ b/christmas-shop.css
@@ -85,20 +85,182 @@
     width: 112px;
     height: 40px;
 }
+.hero_section{
+    width: 1440px;
+    height: 524px;
+    background: #FF4646;
+    background-image: url("bg-snow.png"), url("bg-ball.png");
+    background-size: 1440px 524px ;
+}
 .hero_section_container {
+    width: 426px;
+    max-width: 426px;
+    height: 404px;
+     margin: auto;
+    padding-top: 60px;
+    border-radius: 10px;
+    border: 1px solid beige;
+}
+.caption_font{
+    font-family: 'Allura';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 100%;
+    padding-top: 77px;
+    text-align: center;
+    letter-spacing: 0.05em;
+    color: #FFFFFF;
+}
+.header_ball{
     display: flex;
     flex-direction: column;
+    /*justify-content: space-around;*/
     align-items: center;
-    padding: 60px 8px;
-    width: 1440px;
-    height: 524px;
+    text-align: center;
+    /*text-align: justify;*/
+    width: 426px;
+    height: 144px;
+    border: 1px solid black;
+
+
 }
-.hero_section_img{
-    width: 1440px;
-    height: 524px;
-    /*background: url("bg-ball.png"), url("bg-snow.png"), #FF4646;*/
-    background-color: #FF4646;
+.montserrat_font{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 31px;
+    line-height: 150%;
+    letter-spacing: 0.18em;
+    text-transform: uppercase;
+    color: #FFFFFF;
 }
+
+
+
+/* Header 1 */
+
+width: 426px;
+height: 144px;
+
+/* Header 1 */
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 600;
+font-size: 32px;
+line-height: 150%;
+/* or 48px */
+text-align: center;
+letter-spacing: 0.18em;
+text-transform: uppercase;
+
+color: #FFFFFF;
+
+
+/* Inside auto layout */
+flex: none;
+order: 1;
+align-self: stretch;
+flex-grow: 0;
+
+
+/* Header 1 */
+
+width: 426px;
+height: 144px;
+
+/* Header 1 */
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 600;
+font-size: 32px;
+line-height: 150%;
+/* or 48px */
+text-align: center;
+letter-spacing: 0.18em;
+text-transform: uppercase;
+
+color: #FFFFFF;
+
+
+/* Inside auto layout */
+flex: none;
+order: 1;
+align-self: stretch;
+flex-grow: 0;
+
+
+/* Button */
+
+/* Auto layout */
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 20px 32px;
+
+width: 235px;
+height: 56px;
+
+background: #181C29;
+border-radius: 20px;
+
+/* Inside auto layout */
+flex: none;
+order: 2;
+flex-grow: 0;
+
+
+/* Action Small */
+
+width: 171px;
+height: 16px;
+
+/* Action Small */
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 600;
+font-size: 12px;
+line-height: 130%;
+/* identical to box height, or 16px */
+text-align: center;
+letter-spacing: 0.05em;
+text-transform: uppercase;
+
+color: #FFFFFF;
+
+
+/* Inside auto layout */
+flex: none;
+order: 0;
+flex-grow: 0;
+
+
+/* Caption */
+
+width: 426px;
+height: 24px;
+
+/* Caption */
+font-family: 'Allura';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 100%;
+/* identical to box height, or 24px */
+text-align: center;
+letter-spacing: 0.05em;
+
+color: #FFFFFF;
+
+
+/* Inside auto layout */
+flex: none;
+order: 3;
+align-self: stretch;
+flex-grow: 0;
+
+
 
 
 
